<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_my_items"
            android:icon="@drawable/ic_my_items"
            android:title="@string/my_items" />
        <item
            android:id="@+id/nav_main_store"
            android:icon="@drawable/ic_main_store"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_stops"
            android:icon="@drawable/ic_map"
            android:title="Directions/Costs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>


</menu>